--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -2,22 +2,19 @@
 <html lang="en">
 <head>
    <meta charset="utf-8">
-   <title>ok idiom</title>
+   <title>Chat Sign-Up</title>
 </head>
 <body>
 <form method="post">
-   <input type="text" name="firstname" placeholder="first name"><br>
-   <input type="text" name="lastname" placeholder="last name"><br>
-   <label for="li">Logged In</label>
-   <input type="checkbox" id="li" name="loggedin"><br>
+   <input type="text" name="username" placeholder="email"><br>
+   <input type="text" name="password" placeholder="password"><br>
    <input type="submit">
 
 </form>
 
 {{if .First}}
-FIRST:{{.First}}<br>
-LAST:{{.Last}}<br>
-LOGGED IN:{{.Loggedin}}<br>
+Username: {{.Username}}<br>
+Password: {{.Pass}}<br>
 {{end}}
 </body>
 </html>
