Edited forms within templates

--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -8,7 +8,7 @@
 
    <h1>SIGN-UP</h1>
    <form method="post">
-      <input type="text" name="username" placeholder="email">
+      <input type="text" name="username" placeholder="username">
       <input type="text" name="password" placeholder="password">
       <input type="submit">
    </form>
