Created a go handler for home.gohtml, moved other templates

--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -43,13 +43,13 @@
 </head>
 <body>
     <div id="head" align="center">
-        <img src="../styling/logo/gochat-logo.png" alt="Logo">
+        <img src="../styling/gochat-logo.png" alt="Logo">
         <h2 id="slogan">A chat written entirely in Go</h2>
     </div>
     <div id="body" align="center">
-        <a href="signup.gohtml" class="link"><div class="button">Sign-Up</div></a>
-        <a href="login.gohtml" class="link"><div class="button">Login</div></a>
-        <a href="chat.gohtml" class="link"><div class="button">Chat!</div></a>
+        <a href="signup" class="link"><div class="button">Sign-Up</div></a>
+        <a href="login" class="link"><div class="button">Login</div></a>
+        <a href="chat" class="link"><div class="button">Chat!</div></a>
 
     </div>
 
