--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -22,17 +22,6 @@
         
     }
 
-    .button{
-        background-color: #d9d9d9;
-        border-radius: 4px;
-        text-align: center;
-        border: 3px solid #d9d9d9; 
-        width: 20%;
-        overflow: hidden;
-        float: left;
-        margin-right: 5px;
-        
-    }
 
     .left{
         background-color: #d9d9d9;
@@ -41,8 +30,8 @@
         border: 3px solid #d9d9d9; 
         width: 20%;
         overflow: hidden;
-        float: left;
         margin-left: 250px;
+        display:inline-block;
     
     }
 
@@ -53,8 +42,8 @@
         border: 3px solid #d9d9d9; 
         width: 20%;
         overflow: hidden;
-        float: right;
         margin-right: 250px;
+        display:inline-block;
         
     }
 
@@ -65,8 +54,7 @@
         border: 3px solid #d9d9d9; 
         width: 20%;
         overflow: hidden;
-        float: left;
-        margin-left: 42px;
+        display: inline-block;
         
 
     }
