--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -3,10 +3,35 @@
 <head>
    <meta charset="utf-8">
    <title>Chat Sign-Up</title>
+   <style type="text/css">
+    /*Page styling*/
+        html{
+            background-color: #3399ff;
+            text-align: center;
+         }
+
+         #title{
+             color: #d9d9d9;
+         }
+
+         #return{
+             float: left;
+             background-color: #d9d9d9;
+             border-radius: 4px;
+             text-align: center;
+             border: 3px solid #d9d9d9; 
+             display: inline-block;
+         }
+
+         .link{
+            color: #3399ff;
+            text-decoration: none;
+         }
+   </style>
 </head>
 <body>
-
-   <h1>SIGN-UP</h1>
+    <div id="return"><a href="/" class="link">Return Home</a></div></br>
+   <h1 id="title">SIGN-UP</h1>
    <form method="post">
       <input type="hidden" name="token" value="{{.}}">
       <input type="text" name="username" placeholder="username">
